# UP

./: Anchor.toml  Cargo.toml  LICENSE  hold_pool_vault.json  package-lock.json  package.json
cli/: config.json  index.js  package-lock.json  package.json
docs/: HOOK_ENFORCEMENT.md  INSTALL_TOKEN22.md
keys/: dev-fee.json  mint-authority.json
programs/up_token/: Cargo.toml
programs/up_token/src/: errors.rs  events.rs  helpers.rs  lib.rs  state.rs
programs/up_token/src/hooks/: mod.rs  transfer_hook.rs
programs/up_token/src/instructions/: claim_hold_pool.rs  claim_reflection.rs  initialize.rs  mod.rs  on_transfer.rs  program_transfer.rs  set_dev_wallet.rs  set_fees.rs  set_hook_mode.rs  start_next_epoch.rs
scripts/: create-token22-with-hook.sh  derive-pdas.js
web/: .env.local  .env.local.example  next-env.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
web/.next/cache/: .tsbuildinfo
web/.next/server/: app-paths-manifest.json  functions-config-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: AdminOnly.tsx  DaysHolding.tsx  Header.tsx  Hero.tsx  SocialLinks.tsx  config.ts
web/lib/: anchorClient.ts  ata.ts
(+134 files in other folders)
