[package]
name = "up_token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "up_token"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", features = ["token_2022", "associated_token"] }
thiserror   = "1.0"